--- a/praveen.html
+++ b/praveen.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+I<head>
     <title>Portfolio</title>
     <style>
         body {
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="IMG_20250325_075920.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="praveen.jpg.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>Praveen J</h1>
             <p>Am STUDENT</p>
         </div>
